--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <script src="script.js"></script>
-    <script src="functions.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Vue Hello</title>
 </head>
 <body>
-    
+    <main>
+        <div id="root">
+            <h1 v-model='message'>{{ message }}</h1>
+        </div>
+        <script src="script.js"></script>
+        <script src="functions.js"></script>
+    </main>
 </body>
-</html>
+</html>  
