--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <main>
         <div id="root">
-            <h1 v-model='message'>{{ message }}</h1>
+            <h1>{{ message }}</h1>
+            <img v-bind:src="img" width="300"/> 
         </div>
         <script src="script.js"></script>
         <script src="functions.js"></script>
